# fastapi-app

./: .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-compose-local.yaml  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_02_19_2138-16ff2901c210_init.py  2024_03_03_2142-027b81e60abf_profile_nullable_fields.py  2024_03_05_2155-ea96995b71e1_init.py  2024_03_05_2213-b1c4bd10911c_init.py
app/adapters/rabbitmq/: notify_service.py
app/api/v1/: routers.py  user_ruoters.py
app/core/: build_app.py  database.py  dependency.py  exception_handler.py  redis_cache.py  settings.py
app/domain/constants/: auth_constants.py  email_constants.py  user_constants.py
app/domain/custom_types/: types_users.py
app/domain/exceptions/: auth_exceptions.py  user_exceptions.py
app/domain/schemas/: auth_schemas.py  notify_schemas.py  user_schemas.py
app/domain/services/: auth_service.py  common_service.py  notify_service.py  user_service.py
app/repositories/: repository.py  user_repository.py
app/repositories/cache/: base_cache.py  base_redis.py  user_redis.py
app/repositories/sql_db/: user_db.py
app/repositories/sql_db/admin/: admin_views.py  sql_admin.py
app/repositories/sql_db/migrations/: env.py
app/repositories/sql_db/models/: __init__.py  base.py  user.py
core/: core_types.py  db.py  models.py  routers.py  settings.py
email_notify_service/: main.py
email_notify_service/adapter/rabbitmq/: configure.py
email_notify_service/domain/: constants.py
email_notify_service/domain/schemas/: email_subject.py
email_notify_service/domain/services/: base_service.py  email_service.py
tests/tests_api/: confest.py  conftest.py  test_data.py  test_users.py  test_usesr.py  utils.py
users/: constants.py  models.py  repository.py  routers.py  schemas.py  services.py
users/tests/: test_service.py
users_app/: alembic.ini  main.py
users_app/adapters/broker/: base.py
users_app/api/v1/: auth_routers.py  avatar_routers.py  routers.py  user_ruoters.py
users_app/core/: build_app.py  dependency.py  exception_handler.py  settings.py
users_app/domain/constants/: auth_constants.py  avatar_constants.py  email_constants.py  user_constants.py
users_app/domain/custom_types/: types_users.py
users_app/domain/exceptions/: auth_exceptions.py  user_exceptions.py
users_app/domain/schemas/: auth_schemas.py  avatar_schemas.py  notify_schemas.py  user_schemas.py
users_app/domain/services/: auth_service.py  avatar_service.py  common_service.py  notify_service.py  user_service.py
users_app/repositories/: repository.py  user_repository.py
users_app/repositories/cache/: base_cache.py  base_redis.py  redis_connect.py  user_redis.py
users_app/repositories/sql_db/: base_db.py  session.py  user_db.py
users_app/repositories/storage/: base.py  local.py  s3.py  s3client.py
(+10 files in other folders)
